--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
   <canvas id="particles"></canvas>
 
   <div class="lang-switch">
-    <button id="btn-fa">Fa</button>
-    <button id="btn-en">En</button>
+    <button id="btn-fa">فارسی</button>
+    <button id="btn-en">English</button>
   </div>
   <div class="right-buttons" id="right-buttons">
     <button id="btn-about">درباره من</button>
