--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     .lang-switch{left:12px}.right-buttons{right:12px}
     .lang-switch button,.right-buttons button {
       background:rgba(255,255,255,0.15);color:white;border:none;
-      padding:6px 12px;border-radius:50px;cursor:pointer;font-size:0.8rem;
+      padding:8px 14px; /* اصلاح هماهنگی */
+      border-radius:50px;cursor:pointer;font-size:0.85rem;
+      min-width:70px;text-align:center;
       transition:all 0.3s ease;
     }
     .lang-switch button:hover,.right-buttons button:hover{background:rgba(255,255,255,0.3);transform:scale(1.05)}
@@ -106,7 +108,29 @@
     @keyframes fadeInUp{to{opacity:1;transform:translateY(0)}}
     @keyframes glowPulse{0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}50%{text-shadow:0 0 14px rgba(200,150,255,1)}}
 
-    @media(max-width:480px){.profile-container{width:120px;height:120px}.link-bar{gap:6px}.link-bar a{padding:6px 10px}}
+    @media(max-width:480px){
+      .profile-container{width:120px;height:120px}
+      .link-bar{gap:6px}
+      .link-bar a{padding:6px 10px}
+      .modal-content {
+        max-width:90%;
+        font-size:0.95rem;
+        line-height:1.9;
+        padding:25px 20px;
+        border-radius:14px;
+        box-shadow:0 0 20px rgba(200,150,255,0.8);
+        animation:modalZoom 0.3s ease;
+      }
+      @keyframes modalZoom {
+        from {transform:scale(0.9);opacity:0.5}
+        to {transform:scale(1);opacity:1}
+      }
+      .modal-content h3 {
+        font-size:1.1rem;
+        margin-bottom:12px;
+        text-align:center;
+      }
+    }
   </style>
 </head>
 <body>
@@ -175,7 +199,7 @@
           {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
         ],
         aboutTitle:"درباره من",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
+        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران...`,
         contactTitle:"تماس",
         contact:`ایمیل: mojtabazadeh@outlook.com<br>شماره تماس: 09334115773`,
         footer:"سعید مجتبی زاده ©",
@@ -196,7 +220,7 @@
           {text:"English Website",href:"https://www.mojtabazade.ir/"},
         ],
         aboutTitle:"About Me",
-        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
+        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher...`,
         contactTitle:"Contact",
         contact:`Email: mojtabazadeh@outlook.com<br>Phone: +989334115773`,
         footer:"Saeed Mojtabazadeh ©",
@@ -236,14 +260,12 @@
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
-          // جابه‌جایی دکمه‌ها در حالت انگلیسی
           rightButtons.innerHTML="";
           rightButtons.appendChild(btnContact);
           rightButtons.appendChild(btnAbout);
         } else {
           document.body.classList.remove("lang-en");
           document.documentElement.dir="rtl";
-          // حالت فارسی به ترتیب اصلی
           rightButtons.innerHTML="";
           rightButtons.appendChild(btnAbout);
           rightButtons.appendChild(btnContact);
@@ -288,39 +310,24 @@
       const ratio=window.devicePixelRatio||1;
       canvas.width=window.innerWidth*ratio;
       canvas.height=window.innerHeight*ratio;
-      ctx.setTransform(1,0,0,1,0,0);
       ctx.scale(ratio,ratio);
       createParticles();
     }
-    resizeParticles();
-    window.addEventListener("resize",resizeParticles);
-
-    (function draw(){
+    function drawParticles(){
       ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
-      ctx.fillStyle="rgba(200,150,255,0.8)";
+      ctx.fillStyle="rgba(255,255,255,0.7)";
       particles.forEach(p=>{
-        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
+        ctx.beginPath();
+        ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+        ctx.fill();
         p.x+=p.dx;p.y+=p.dy;
         if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
         if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
       });
-      ctx.strokeStyle="rgba(200,150,255,0.2)";
-      ctx.lineWidth=0.5;
-      for(let i=0;i<particles.length;i++){
-        for(let j=i+1;j<particles.length;j++){
-          const dx=particles[i].x-particles[j].x;
-          const dy=particles[i].y-particles[j].y;
-          const dist=Math.sqrt(dx*dx+dy*dy);
-          if(dist<120){
-            ctx.beginPath();
-            ctx.moveTo(particles[i].x,particles[i].y);
-            ctx.lineTo(particles[j].x,particles[j].y);
-            ctx.stroke();
-          }
-        }
-      }
-      requestAnimationFrame(draw);
-    })();
+      requestAnimationFrame(drawParticles);
+    }
+    window.addEventListener("resize",resizeParticles);
+    resizeParticles();drawParticles();
   </script>
 </body>
 </html>
