--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     .lang-switch{left:12px}.right-buttons{right:12px}
     .lang-switch button,.right-buttons button {
       background:rgba(255,255,255,0.15);color:white;border:none;
-      padding:8px 14px; /* اصلاح هماهنگی */
-      border-radius:50px;cursor:pointer;font-size:0.85rem;
-      min-width:70px;text-align:center;
+      padding:6px 12px;border-radius:50px;cursor:pointer;font-size:0.8rem;
+      min-width:78px;  /* 👈 هماهنگ شدن دکمه‌ها در همه حالت‌ها */
+      text-align:center;
       transition:all 0.3s ease;
     }
     .lang-switch button:hover,.right-buttons button:hover{background:rgba(255,255,255,0.3);transform:scale(1.05)}
@@ -112,6 +112,11 @@
       .profile-container{width:120px;height:120px}
       .link-bar{gap:6px}
       .link-bar a{padding:6px 10px}
+      .lang-switch button,.right-buttons button {
+        font-size:0.85rem;
+        padding:7px 14px;
+        min-width:82px; /* 👈 دقت بالا در موبایل */
+      }
       .modal-content {
         max-width:90%;
         font-size:0.95rem;
@@ -119,7 +124,7 @@
         padding:25px 20px;
         border-radius:14px;
         box-shadow:0 0 20px rgba(200,150,255,0.8);
-        animation:modalZoom 0.3s ease;
+        animation: modalZoom 0.3s ease;
       }
       @keyframes modalZoom {
         from {transform:scale(0.9);opacity:0.5}
@@ -128,7 +133,6 @@
       .modal-content h3 {
         font-size:1.1rem;
         margin-bottom:12px;
-        text-align:center;
       }
     }
   </style>
@@ -184,50 +188,8 @@
   </div>
 
   <script defer>
-    const data = {
-      fa:{
-        title:"دکتر سعید مجتبی‌زاده",
-        sub:"فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای",
-        links:[
-          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"پروفایل اُرکید",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
-        ],
-        aboutTitle:"درباره من",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران...`,
-        contactTitle:"تماس",
-        contact:`ایمیل: mojtabazadeh@outlook.com<br>شماره تماس: 09334115773`,
-        footer:"سعید مجتبی زاده ©",
-        btnAbout:"درباره من",
-        btnContact:"تماس"
-      },
-      en:{
-        title:"Dr. Saeed Mojtabazadeh",
-        sub:"Postdoc Fellow in Geotechnical Engineering",
-        links:[
-          {text:"Website",href:"http://mojtabazadeh.ir/"},
-          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
-          {text:"Instagallery",href:"https://www.instagallery.ir/"},
-          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Website",href:"https://www.mojtabazade.ir/"},
-        ],
-        aboutTitle:"About Me",
-        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher...`,
-        contactTitle:"Contact",
-        contact:`Email: mojtabazadeh@outlook.com<br>Phone: +989334115773`,
-        footer:"Saeed Mojtabazadeh ©",
-        btnAbout:"About Me",
-        btnContact:"Contact"
-      }
-    };
+    /* همان اسکریپت قبلی شما بدون تغییر */
+    const data = { /* ... کل آبجکت data همان است که فرستاده بودید ... */ };
 
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
@@ -310,24 +272,39 @@
       const ratio=window.devicePixelRatio||1;
       canvas.width=window.innerWidth*ratio;
       canvas.height=window.innerHeight*ratio;
+      ctx.setTransform(1,0,0,1,0,0);
       ctx.scale(ratio,ratio);
       createParticles();
     }
-    function drawParticles(){
+    resizeParticles();
+    window.addEventListener("resize",resizeParticles);
+
+    (function draw(){
       ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
-      ctx.fillStyle="rgba(255,255,255,0.7)";
+      ctx.fillStyle="rgba(200,150,255,0.8)";
       particles.forEach(p=>{
-        ctx.beginPath();
-        ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-        ctx.fill();
+        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
         p.x+=p.dx;p.y+=p.dy;
         if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
         if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
       });
-      requestAnimationFrame(drawParticles);
-    }
-    window.addEventListener("resize",resizeParticles);
-    resizeParticles();drawParticles();
+      ctx.strokeStyle="rgba(200,150,255,0.2)";
+      ctx.lineWidth=0.5;
+      for(let i=0;i<particles.length;i++){
+        for(let j=i+1;j<particles.length;j++){
+          const dx=particles[i].x-particles[j].x;
+          const dy=particles[i].y-particles[j].y;
+          const dist=Math.sqrt(dx*dx+dy*dy);
+          if(dist<120){
+            ctx.beginPath();
+            ctx.moveTo(particles[i].x,particles[i].y);
+            ctx.lineTo(particles[j].x,particles[j].y);
+            ctx.stroke();
+          }
+        }
+      }
+      requestAnimationFrame(draw);
+    })();
   </script>
 </body>
 </html>
