--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
     .lang-switch button,.right-buttons button {
       background:rgba(255,255,255,0.15);color:white;border:none;
       padding:6px 12px;border-radius:50px;cursor:pointer;font-size:0.8rem;
-      min-width:78px;  /* 👈 هماهنگ شدن دکمه‌ها در همه حالت‌ها */
-      text-align:center;
       transition:all 0.3s ease;
     }
     .lang-switch button:hover,.right-buttons button:hover{background:rgba(255,255,255,0.3);transform:scale(1.05)}
@@ -108,33 +106,7 @@
     @keyframes fadeInUp{to{opacity:1;transform:translateY(0)}}
     @keyframes glowPulse{0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}50%{text-shadow:0 0 14px rgba(200,150,255,1)}}
 
-    @media(max-width:480px){
-      .profile-container{width:120px;height:120px}
-      .link-bar{gap:6px}
-      .link-bar a{padding:6px 10px}
-      .lang-switch button,.right-buttons button {
-        font-size:0.85rem;
-        padding:7px 14px;
-        min-width:82px; /* 👈 دقت بالا در موبایل */
-      }
-      .modal-content {
-        max-width:90%;
-        font-size:0.95rem;
-        line-height:1.9;
-        padding:25px 20px;
-        border-radius:14px;
-        box-shadow:0 0 20px rgba(200,150,255,0.8);
-        animation: modalZoom 0.3s ease;
-      }
-      @keyframes modalZoom {
-        from {transform:scale(0.9);opacity:0.5}
-        to {transform:scale(1);opacity:1}
-      }
-      .modal-content h3 {
-        font-size:1.1rem;
-        margin-bottom:12px;
-      }
-    }
+    @media(max-width:480px){.profile-container{width:120px;height:120px}.link-bar{gap:6px}.link-bar a{padding:6px 10px}}
   </style>
 </head>
 <body>
@@ -188,8 +160,50 @@
   </div>
 
   <script defer>
-    /* همان اسکریپت قبلی شما بدون تغییر */
-    const data = { /* ... کل آبجکت data همان است که فرستاده بودید ... */ };
+    const data = {
+      fa:{
+        title:"دکتر سعید مجتبی‌زاده",
+        sub:"فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای",
+        links:[
+          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
+          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
+          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"پروفایل اُرکید",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
+        ],
+        aboutTitle:"درباره من",
+        about:دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. ,
+        contactTitle:"تماس",
+        contact:ایمیل: mojtabazadeh@outlook.com<br>شماره تماس: 09334115773,
+        footer:"سعید مجتبی زاده ©",
+        btnAbout:"درباره من",
+        btnContact:"تماس"
+      },
+      en:{
+        title:"Dr. Saeed Mojtabazadeh",
+        sub:"Postdoc Fellow in Geotechnical Engineering",
+        links:[
+          {text:"Website",href:"http://mojtabazadeh.ir/"},
+          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Instagallery",href:"https://www.instagallery.ir/"},
+          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"English Website",href:"https://www.mojtabazade.ir/"},
+        ],
+        aboutTitle:"About Me",
+        about:Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.,
+        contactTitle:"Contact",
+        contact:Email: mojtabazadeh@outlook.com<br>Phone: +989334115773,
+        footer:"Saeed Mojtabazadeh ©",
+        btnAbout:"About Me",
+        btnContact:"Contact"
+      }
+    };
 
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
@@ -222,12 +236,14 @@
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
+          // جابه‌جایی دکمه‌ها در حالت انگلیسی
           rightButtons.innerHTML="";
           rightButtons.appendChild(btnContact);
           rightButtons.appendChild(btnAbout);
         } else {
           document.body.classList.remove("lang-en");
           document.documentElement.dir="rtl";
+          // حالت فارسی به ترتیب اصلی
           rightButtons.innerHTML="";
           rightButtons.appendChild(btnAbout);
           rightButtons.appendChild(btnContact);
