--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         links:[
           {text:"Website",href:"http://mojtabazadeh.ir/"},
           {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
           {text:"Instagallery",href:"https://www.instagallery.ir/"},
           {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
           {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
