--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
+  <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
+  <meta property="og:description" content="پایگاه دکتر سعید مجتبی‌زاده">
+  <meta property="og:image" content="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg">
+  <meta property="og:url" content="http://www.mojtabazadeh.ir/">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="icon" type="image/png" sizes="512x512" href="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/favicon.png?raw=true">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -30,16 +36,25 @@
     #particles {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
 
     .profile-container {
-      width:150px;height:150px;
-      margin:35px auto 16px;
+      width:150px;
+      height:150px;
+      margin:25px auto 16px;
       border-radius:50%;
       box-shadow:0 0 25px rgba(255,120,255,0.6),0 0 45px rgba(140,70,255,0.3);
       animation:floatMove 6s ease-in-out infinite;
       background:rgba(255,255,255,0.05);
-      position:relative;overflow:visible;
+      position:relative;
+      overflow:visible;
     }
-    .profile-container svg {width:100%;height:100%;display:block;}
-    @keyframes floatMove {0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
+    .profile-container svg {
+      width:100%;
+      height:100%;
+      display:block;
+    }
+    @keyframes floatMove {
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-6px)}
+    }
 
     .title-wrapper {
       max-width:90vw;margin-bottom:20px;
@@ -50,13 +65,15 @@
       font-weight:800;
       background:linear-gradient(90deg,#ffccff,#cc99ff,#9966ff);
       -webkit-background-clip:text;-webkit-text-fill-color:transparent;
-      text-shadow:0 0 14px rgba(200,150,255,0.8);
+      text-shadow:0 0 12px rgba(200,150,255,0.6);
       animation:glowPulse 4s ease-in-out infinite;
     }
     .title-sub {
       font-size:clamp(1rem,3vw,1.2rem);
-      color:#e0c7ff;font-weight:600;
-      margin-top:4px;text-shadow:0 1px 3px rgba(0,0,0,0.4);
+      color:#e0c7ff;
+      font-weight:600;
+      margin-top:4px;
+      text-shadow:0 1px 3px rgba(0,0,0,0.4);
     }
 
     .link-bar {
@@ -66,11 +83,12 @@
     }
     .link-bar a {
       background:rgba(255,255,255,0.1);
-      color:white;padding:8px 14px;
-      min-width:95px;text-align:center;
+      color:white;
+      padding:8px 14px;
       border-radius:25px;
       font-size:clamp(0.8rem,3vw,0.95rem);
-      text-decoration:none;transition:all 0.3s ease;
+      text-decoration:none;
+      transition:all 0.3s ease;
     }
     .link-bar a:hover {
       background:rgba(255,255,255,0.25);
@@ -78,77 +96,88 @@
       transform:translateY(-2px);
     }
 
-    .about-wrapper {
-      width:95%;max-width:900px;
+    .about-box {
+      max-width:900px;
       background:rgba(255,255,255,0.08);
-      backdrop-filter:blur(6px);
-      border-radius:20px;
-      padding:20px 16px;
-      line-height:1.8;text-align:justify;
-      font-size:clamp(0.9rem,2.5vw,1rem);
-      box-shadow:0 0 16px rgba(180,120,255,0.3);
+      padding:18px;
+      border-radius:16px;
+      line-height:1.8;
+      font-size:clamp(0.9rem,3vw,1rem);
+      text-align:justify;
+      margin-bottom:18px;
+      box-shadow:0 0 12px rgba(180,100,255,0.3);
       animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px);
-      margin-top:8px;
     }
-    .about-wrapper p {margin-bottom:10px;color:#f3e8ff}
 
-    .contact-bar {
-      margin-top:16px;
-      display:flex;flex-direction:column;align-items:center;
-      gap:8px;
-      animation:fadeInUp 1.6s ease forwards;opacity:0;transform:translateY(10px);
+    .contact-box {
+      margin-top:8px;
+      padding:12px 18px;
+      border-radius:16px;
+      background: rgba(255,255,255,0.08);
+      box-shadow: 0 0 12px rgba(180,100,255,0.3);
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:6px;
+      animation: contactGlow 4s ease-in-out infinite;
+      max-width:320px;
     }
     .contact-item {
-      background:rgba(255,255,255,0.1);
-      padding:8px 16px;
-      border-radius:30px;
-      color:#fff;
-      font-size:clamp(0.85rem,2.5vw,0.95rem);
+      display:flex;
+      align-items:center;
+      gap:6px;
+      font-size:0.95rem;
+      color:#f0e6ff;
       text-decoration:none;
-      display:inline-flex;align-items:center;gap:6px;
-      transition:all 0.4s ease;
-      animation: pulseGlow 3s infinite;
+      transition:all 0.3s ease;
     }
     .contact-item:hover {
-      background:rgba(255,255,255,0.25);
-      transform:translateY(-2px) scale(1.03);
-      box-shadow:0 0 10px rgba(200,150,255,0.6);
+      color:#ffffff;
+      text-shadow:0 0 6px rgba(200,150,255,0.8);
+      transform:translateY(-2px);
     }
-    @keyframes pulseGlow {
-      0%,100% {box-shadow:0 0 8px rgba(200,150,255,0.4);}
-      50% {box-shadow:0 0 14px rgba(200,150,255,0.9);}
+    .contact-icon {font-size:1.1rem}
+    @keyframes contactGlow {
+      0%,100% { box-shadow:0 0 10px rgba(180,100,255,0.3); }
+      50% { box-shadow:0 0 18px rgba(200,150,255,0.5); }
     }
 
     .footer {font-size:0.8rem;margin-top:18px;opacity:0.7}
     .footer a {color:white;text-decoration:none}
 
     .lang-switch {
-      position:fixed;top:12px;left:12px;
-      display:flex;gap:6px;z-index:99;
+      position:fixed;top:12px;left:12px;display:flex;gap:6px;z-index:99;
     }
     .lang-switch button {
       background:rgba(255,255,255,0.15);
-      color:white;border:none;
-      min-width:72px;
-      padding:6px 12px;
-      border-radius:50px;
-      cursor:pointer;font-size:0.8rem;text-align:center;
+      color:white;border:none;padding:7px 14px;
+      border-radius:50px;cursor:pointer;font-size:0.8rem;
       transition:all 0.3s ease;
     }
     .lang-switch button:hover {
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    .smooth-switch {animation: smoothFadeSlide 0.9s ease;}
-    @keyframes smoothFadeSlide {0%{opacity:1;transform:translateY(0)}40%{opacity:0;transform:translateY(-15px)}60%{opacity:0;transform:translateY(15px)}100%{opacity:1;transform:translateY(0)}}
-    @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
-    @keyframes glowPulse {0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}50%{text-shadow:0 0 14px rgba(200,150,255,1)}}
+    .smooth-switch {animation:smoothFadeSlide 0.9s ease;}
+    @keyframes smoothFadeSlide {
+      0%{opacity:1;transform:translateY(0)}
+      40%{opacity:0;transform:translateY(-15px)}
+      60%{opacity:0;transform:translateY(15px)}
+      100%{opacity:1;transform:translateY(0)}
+    }
+    @keyframes fadeInUp {to{opacity:1;transform:translateY(0)}}
+    @keyframes glowPulse {
+      0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}
+      50%{text-shadow:0 0 14px rgba(200,150,255,1)}
+    }
 
     @media(max-width:480px){
-      .profile-container{width:120px;height:120px;margin-top:30px}
+      .profile-container{width:120px;height:120px;}
       .link-bar{gap:6px}
       .link-bar a{padding:6px 10px}
-      .about-wrapper{padding:16px 12px}
+      .contact-box{max-width:95%;padding:10px;}
+      .contact-item{font-size:0.9rem;}
+      .about-box{text-align:right}
     }
   </style>
 </head>
@@ -168,27 +197,31 @@
   </div>
 
   <div class="title-wrapper">
-    <h1 class="title-line" id="main-title"></h1>
-    <h2 class="title-sub" id="sub-title"></h2>
+    <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
+    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
 
-  <div class="about-wrapper" id="about-text"></div>
+  <div class="about-box" id="about-text">
+    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.
+  </div>
 
-  <div class="contact-bar" id="contact-bar"></div>
+  <div class="contact-box">
+    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com"><span class="contact-icon">📧</span>mojtabazadeh@outlook.com</a>
+    <a class="contact-item" href="tel:+989334115773"><span class="contact-icon">📞</span>+98 933 411 5773</a>
+  </div>
 
   <div class="footer">
     © <a href="http://www.mojtabazadeh.ir/" target="_blank">Saeed Mojtabazadeh | www.mojtabazadeh.ir</a>
   </div>
 
-  <script>
-    const data = {
+  <script defer>
+    const data={
       fa:{
         title:"دکتر سعید مجتبی‌زاده",
         sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
-        about:`<p>دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است.</p>
-        <p>از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.</p>`,
+        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است...`,
         links:[
           {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
           {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
@@ -198,30 +231,21 @@
           {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
           {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
           {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
-        ],
-        contact:[
-          {text:"mojtabazadeh@outlook.com",href:"mailto:mojtabazadeh@outlook.com"},
-          {text:"+989334115773",href:"tel:+989334115773"}
         ]
       },
       en:{
         title:"Dr. Saeed Mojtabazadeh",
         sub:"Postdoc Fellow in Geotechnical Engineering",
-        about:`<p>Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method.</p>
-        <p>He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.</p>`,
+        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran...`,
         links:[
           {text:"Website",href:"http://mojtabazadeh.ir/"},
           {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
           {text:"Instagallery",href:"https://www.instagallery.ir/"},
           {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
           {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
           {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
           {text:"English Website",href:"https://www.mojtabazade.ir/"}
-        ],
-        contact:[
-          {text:"mojtabazadeh@outlook.com",href:"mailto:mojtabazadeh@outlook.com"},
-          {text:"+989334115773",href:"tel:+989334115773"}
         ]
       }
     };
@@ -229,8 +253,7 @@
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
           linksContainer=document.getElementById("links"),
-          aboutText=document.getElementById("about-text"),
-          contactBar=document.getElementById("contact-bar");
+          aboutText=document.getElementById("about-text");
 
     function buildLinks(lang){
       linksContainer.innerHTML="";
@@ -240,37 +263,24 @@
         linksContainer.appendChild(a);
       });
     }
-
-    function buildContacts(lang){
-      contactBar.innerHTML="";
-      data[lang].contact.forEach(c=>{
-        const a=document.createElement("a");
-        a.href=c.href;a.textContent=c.text;
-        a.className="contact-item";
-        contactBar.appendChild(a);
-      });
-    }
-
     function switchLang(lang){
       localStorage.setItem("lang",lang);
       document.body.classList.add("smooth-switch");
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
-        aboutText.innerHTML=data[lang].about;
+        aboutText.textContent=data[lang].about;
         buildLinks(lang);
-        buildContacts(lang);
         if(lang==="en"){
           document.body.classList.add("lang-en");
           document.documentElement.dir="ltr";
-        } else {
+        }else{
           document.body.classList.remove("lang-en");
           document.documentElement.dir="rtl";
         }
       },300);
       setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
     }
-
     const savedLang=localStorage.getItem("lang")||"fa";
     switchLang(savedLang);
     document.getElementById("btn-fa").onclick=()=>switchLang("fa");
@@ -279,7 +289,7 @@
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
     function createParticles(){
-      const count=Math.min(150,Math.floor((window.innerWidth*window.innerHeight)/10000));
+      const count=Math.floor((window.innerWidth*window.innerHeight)/9000);
       particles=Array.from({length:count},()=>({
         x:Math.random()*window.innerWidth,
         y:Math.random()*window.innerHeight,
@@ -297,7 +307,7 @@
       createParticles();
     }
     resizeParticles();
-    window.addEventListener("resize",()=>{resizeParticles();createParticles();});
+    window.addEventListener("resize",resizeParticles);
 
     (function draw(){
       ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
