--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
       text-align:justify;
       margin-bottom:18px;
       box-shadow:0 0 12px rgba(180,100,255,0.3);
-      animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px);
+      animation:floatBox 7s ease-in-out infinite;
+    }
+    @keyframes floatBox {
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-4px)}
     }
 
     .contact-box {
@@ -119,10 +123,11 @@
       flex-direction:column;
       align-items:center;
       gap:6px;
-      animation: contactGlow 4s ease-in-out infinite;
+      animation: contactGlow 4s ease-in-out infinite, floatBox 6s ease-in-out infinite;
       max-width:320px;
     }
     .contact-item {
+      direction:ltr;
       display:flex;
       align-items:center;
       gap:6px;
@@ -204,7 +209,7 @@
   <div class="link-bar" id="links"></div>
 
   <div class="about-box" id="about-text">
-    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.
+    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است...
   </div>
 
   <div class="contact-box">
@@ -221,7 +226,7 @@
       fa:{
         title:"دکتر سعید مجتبی‌زاده",
         sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است...`,
+        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران...`,
         links:[
           {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
           {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
